Update README.md
updating the module paths for the readme


Signed-off-by: Natalie <153607888+MienieN@users.noreply.github.com>